--- a/original-case/trip-planner/src/app/home/home.component.html
+++ b/original-case/trip-planner/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 
 <div style="padding: 13px;" class="form-group">
+  <h2>Fare calculator</h2>
+
   <mat-spinner *ngIf="airports.length === 0"></mat-spinner>
 
     <label for="name" >Origin: </label>
